# Thermite-Lang

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
include/ast/: AstNode.h  CodeGenContext.h  ExpressionNode.h  StatementNode.h
include/enum/: Operation.h  TokenClass.h
include/lib/: magic_enum.hpp
include/parser/: Generator.h  Lexer.h  Parser.h
src/: CMakeLists.txt  main.cc  xmake.lua
src/ast/: AstNode.cc  CodeGenContext.cc  ExpressionNode.cc  StatementNode.cc
src/include/ast/: AstNode.h  ExpressionNode.h  StatementNode.h
src/include/parser/: Generator.h  Lexer.h  Parser.h  Token.h
src/parser/: Generator.cc  Lexer.cc  Parser.cc  Token.cc
test/: CMakeLists.txt  test.tm  xmake.lua
test/Lexer-Test/: Test.cc
test/Parser-Test/: Test.cc
test/Program/: TestCases.h
